--- a/public/index.html
+++ b/public/index.html
@@ -661,8 +661,8 @@
                 </div>
                 
                 <div class="nav-actions">
-                    <button class="btn btn-outline">Sign In</button>
-                    <button class="btn btn-primary">Get Started</button>
+                    <button class="btn btn-outline">Sign In(Soon)</button>
+                    <button class="btn btn-primary">Get Started(Soon)</button>
                 </div>
             </nav>
         </div>
@@ -1070,4 +1070,5 @@
     </script>
 </body>
 </html>
+
 
